--- a/css/main.css
+++ b/css/main.css
@@ -61,8 +61,37 @@ body {
 
 .main-footer {
     display: flex;
+    flex-direction: column;
     margin: 0px 22px 0px 22px;
     border: 1px solid brown;
     width: 96%;
     height: 100px;
+}
+
+.footer-1 {
+    display: flex;
+    font-size: 11px;
+    border: 1px solid gold;
+}
+
+.footer-2 {
+    display: flex;
+    border: 1px solid springgreen;
+}
+
+.footer-p {
+    display: flex;
+    border: steelblue solid 1px;
+}
+
+.ul-2 {
+    display: flex;
+    flex-direction: row;
+    border: 1px solid red;
+} 
+
+.ul-2 li {
+    display: flex;
+    text-decoration: none;
+    border: tomato 1px solid;
 }
