--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,8 @@
   justify-content: center;
   width: 100%;
   height: 538px;
+  background-position: 0 500px;
+  background-size: 100%;
   background-image: url(/images/main-body-image.jpg);
   border: 1px solid blue;
 }
