--- a/css/main.css
+++ b/css/main.css
@@ -11,8 +11,10 @@
 
 .main {
   display: flex;
-  width: 100%;
-  height: 65%;
+  width: 1440px;
+  height: 538px;
+  background-image: url(/images/main-body-image.jpg);
+  background-repeat: no-repeat;
   justify-content: center;
 }
 
@@ -21,13 +23,10 @@
   justify-content: center;
   width: 100%;
   height: 538px;
-  background-image: url(/images/main-body-image.jpg);
-  border: 1px solid blue;
 }
 
 .nav-bar {
   display: flex;
-  border: 1px solid green;
   width: 95%;
 }
 
@@ -52,8 +51,8 @@
   display: flex;
   justify-content: center;
   width: 100%;
+  height: 200px;
   background-color: hsl(0, 0%, 93%);
-  border: 1px green solid;
 }
 
 .thumbnails img {
