--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 /*
@@ -11,7 +12,7 @@
 
 .main {
   display: flex;
-  width: 1440px;
+  width: 100%;
   height: 538px;
   justify-content: center;
 }
@@ -21,10 +22,9 @@
   justify-content: center;
   width: 100%;
   height: 538px;
-  background-position: 0 638px;
+  background-position: 0 580px;
   background-size: 100%;
   background-image: url(/images/main-body-image.jpg);
-  border: 1px solid blue;
 }
 
 .nav-bar {
