added background text

--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,6 @@
   background-position: 0 638px;
   background-size: 100%;
   background-image: url(/images/main-body-image.jpg);
-  border: 1px solid blue;
 }
 
 .nav-bar {
@@ -61,6 +60,27 @@
   display: flex;
   width: 25%;
   height: 200px;
+}
+
+.body-text {
+    position: absolute;
+    margin: 180px 40px;
+    text-align: center;
+    color: white;
+    font-weight: lighter;
+    font-size: 30px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    border: 1px solid red;
+}
+
+#body-text-p1  {
+    font-size: 40px;
+    margin: 20px 0;
+}
+
+#body-text-p2 {
+    font-size: 24px;
+    margin: 20px 0;
 }
 
 /*
