--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,13 @@
   justify-content: center;
   background-position: 0 580px;
   background-size: 100%;
-  background-image: url("/images/main-body-image.jpg");
+  background-image: url("images/main-body-image.jpg");
 }
 
 .ul-1 {
   display: flex;
   margin-top: 75px;
-  background-image: url("/images/nav-bar-image.png");
+  background-image: url("images/nav-bar-image.png");
   list-style: none;
   width: 980px;
   height: 36px;
