--- a/css/main.css
+++ b/css/main.css
@@ -15,7 +15,7 @@
   width: 100%;
   height: 538px;
   justify-content: center;
-  background: url(images/main-body-image.jpg);
+  background: url(/images/main-body-image.jpg);
   background-position: 0 580px;
   background-size: 100%;
 }
@@ -23,7 +23,7 @@
 .ul-1 {
   display: flex;
   margin-top: 75px;
-  background: url(images/nav-bar-image.png);
+  background: url(/images/nav-bar-image.png);
   list-style: none;
   width: 980px;
   height: 36px;
@@ -76,7 +76,7 @@
   height: 200px;
 }
 
-.thumbnails img {
+.thumbnails a {
   display: flex;
   width: 25%;
   height: 200px;
@@ -97,9 +97,29 @@
   margin: 20px 0;
 }
 
+.main-footer a {
+  padding: 0 4px;
+  color: hsl(200, 100%, 40%);
+  text-decoration: none;
+}
+
+.ul-2 a {
+  display: flex;
+  align-items: flex-end;
+  text-decoration: none;
+  margin: 1px;
+  padding-right: 4px;
+  list-style: none;
+}
+
 #body-text-p2 {
   font-size: 24px;
   margin: 20px 0;
+  cursor: pointer;
+}
+
+#body-text-p2 a {
+  margin-left: 55px;
 }
 
 /*
@@ -144,21 +164,7 @@
   color: hsl(200, 100%, 40%);
 }
 
-.ul-2 li {
-  display: flex;
-  align-items: flex-end;
-  text-decoration: none;
-  margin: 1px;
-  padding-right: 4px;
-}
-
 .img-foooter {
   width: 20px;
   height: 20px;
-}
-
-.main-footer a {
-  padding: 0 4px;
-  color: hsl(200, 100%, 40%);
-  text-decoration: none;
 }
