--- a/css/main.css
+++ b/css/main.css
@@ -103,12 +103,11 @@
   text-decoration: none;
 }
 
-.ul-2 a {
+.ul-2 li {
   display: flex;
   align-items: flex-end;
   text-decoration: none;
   margin: 1px;
-  padding-right: 4px;
   list-style: none;
 }
 
@@ -131,7 +130,7 @@
 .main-footer {
   display: flex;
   margin: auto;
-  width: 1000px;
+  width: 1100px;
   height: 90px;
   flex-wrap: wrap;
 }
@@ -158,7 +157,7 @@
 .ul-2 {
   display: flex;
   justify-content: space-between;
-  width: 510px;
+  width: 540px;
   height: 27px;
   font-size: 11px;
   color: hsl(200, 100%, 40%);
