--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   width: 100%;
   height: 538px;
   justify-content: center;
-  background: url(/images/main-body-image.jpg);
+  background: url(../img/main-body-image.jpg);
   background-position: 0 580px;
   background-size: 100%;
 }
@@ -23,7 +23,7 @@
 .ul-1 {
   display: flex;
   margin-top: 75px;
-  background: url(/images/nav-bar-image.png);
+  background: url(../img/nav-bar-image.png);
   list-style: none;
   width: 980px;
   height: 36px;
