--- a/css/styles.css
+++ b/css/styles.css
@@ -15,9 +15,8 @@
   width: 100%;
   height: 538px;
   justify-content: center;
-  background-image: url(../img/main-body-image.jpg);
-  background-position: 0 580px;
-  background-repeat: none;
+  background: url(../img/main-body-image.jpg);
+  background-repeat: no-repeat;
   background-size: 100%;
   cursor: pointer;
 }
