--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
   width: 100%;
   height: 538px;
   justify-content: center;
-  background: url(../img/main-body-image.jpg);
+  background-image: url(../img/main-body-image.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   cursor: pointer;
