fixed background image issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,7 @@
   height: 538px;
   justify-content: center;
   background-image: url(../img/main-body-image.jpg);
+  background-repeat: no-repeat;
   background-size: 100%;
   cursor: pointer;
 }
