--- a/css/styles.css
+++ b/css/styles.css
@@ -4,14 +4,21 @@
   box-sizing: border-box;
 }
 
+.flex {
+  display: flex;
+}
+
+.color-white {
+  color: white;
+}
+
 /*
 ========================================
     Main
 ========================================
 */
 
-.main {
-  display: flex;
+main {
   width: 100%;
   height: 538px;
   justify-content: center;
@@ -22,7 +29,6 @@
 }
 
 .ul-1 {
-  display: flex;
   margin-top: 75px;
   background: linear-gradient(rgb(116, 116, 116) 50%, rgb(107, 107, 107) 50%);
   list-style: none;
@@ -39,7 +45,6 @@
 }
 
 .ul-2 li {
-  display: flex;
   align-items: flex-end;
   text-decoration: none;
   margin: 1px;
@@ -65,9 +70,8 @@
 }
 
 .fas {
-  color: white;
   position: relative;
-  right: 50px;
+  right: 60px;
 }
 
 .search-input {
@@ -79,7 +83,6 @@
 }
 
 .thumbnails {
-  display: flex;
   justify-content: center;
   width: 100%;
   height: 200px;
@@ -102,7 +105,6 @@
   position: absolute;
   margin: 180px 40px;
   text-align: center;
-  color: white;
   font-weight: lighter;
   font-size: 30px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
@@ -128,7 +130,6 @@
 .body-text-p2 a {
   margin-left: 55px;
   text-decoration: none;
-  color: white;
 }
 
 /*
@@ -138,7 +139,6 @@
 */
 
 .main-footer {
-  display: flex;
   margin: auto;
   width: 1100px;
   height: 90px;
@@ -146,7 +146,6 @@
 }
 
 .footer-1 {
-  display: flex;
   width: 480px;
   height: 27px;
   font-size: 11px;
@@ -157,7 +156,6 @@
 }
 
 .footer-2 {
-  display: flex;
   width: 480px;
   height: 27px;
   font-size: 11px;
@@ -167,7 +165,6 @@
 }
 
 .ul-2 {
-  display: flex;
   justify-content: space-between;
   width: 540px;
   height: 27px;
