--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,6 @@ main {
 .ul-1 a {
   height: 36px;
   width: 100px;
-  display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -89,13 +88,11 @@ main {
 }
 
 .thumbnails a {
-  display: flex;
   width: 1349px;
   height: 200px;
 }
 
 .thumbnails img {
-  display: flex;
   width: 100%;
   height: 200px;
   object-fit: cover;
@@ -108,6 +105,10 @@ main {
   font-weight: lighter;
   font-size: 30px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.body-text a {
+  text-decoration: none;
 }
 
 .body-text-p1 {
